--- a/RANKscreen.html
+++ b/RANKscreen.html
@@ -43,21 +43,17 @@
     <div class="main">
       <div class="heading">
         <h1>RANK LEADERBOARD</h1>
-
-
       </div>
-
-
-
+      <div class="rank">
+        <p>1.</p>
+        <p>2.</p>
+        <p>3.</p>
+        <p>4.</p>
+        <p>5.</p>
     </div>
 
 
 
-
-
-
-     </div>
-    </div>
 
 
 </body>
