--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
         <input class="fill-type" type="text" name="" placeholder="Password">
     </div>
     <div class="button">
-      <button onclick="window.location.href = 'GAMEscreen.html';" class="btn sign">Sign in</button>
-
-
+      <button onclick="window.location.href = 'GAMEscreen.html'" class="btn sign">Sign in</button>
   </div>
     </div>
+
+
     <div class="Account">
       <div class="up">
-        <a href="">I don't have an account</P>
-        <p class="log">Sign up</p>
-  </div>
-</div>
+        <p>I don't have an account</P>
+      </div>
+        <a href="signupScreen.html" class="log">Sign up</p>
+    </div>
+
 
 
 
@@ -46,6 +47,11 @@
 
  </div>
 </div>
+
+
+
+
+
 
   </body>
 </html>
