--- a/GAMEscreen.html
+++ b/GAMEscreen.html
@@ -43,8 +43,9 @@
 
       function initMap() {
 
+        //map options
         var options = {
-          center: {lat: 50.376289, lng: -4.143841},
+          center: {lat: 50.376289,lng: -4.143841},
           zoom: 8
         }
 
@@ -81,17 +82,17 @@
             //array of markers
             var markers = [
             {
-              lat: 50.376289, lng: -4.143841,
+              coords:{lat: 50.376289, lng: -4.143841},
               content: '<h1>Plymouth</h1>'
             },
 
             {
-                lat: 50.376289, lng: -4.143841,
+                coords:{lat: 50.41563, lng: -5.07521},
                 content: '<h1>Newquay</h1>'
               },
 
               {
-                lat: 51.50583, lng: -3.57722,
+                coords:{lat: 51.50583, lng: -3.57722},
                 content: '<h1>Bridgend</h1>'
               }
 
@@ -115,10 +116,7 @@
               map: map
 
               });
-
-
-
-          }
+            }
 
            }
 
